@@ -104,6 +104,19 @@ Vue.filter('round', function(number, precision){
     return shift(Math.round(shift(number, precision, false)), precision, true);
 });
 
+
+/*
+ * format a file size using common bytes multiples
+ */
+
+Vue.filter('bytes', function(bytes){
+    if (isNaN(parseFloat(bytes)) || !isFinite(bytes)) return '-';
+    if (typeof precision === 'undefined') precision = 1;
+    var units = ['bytes', 'kB', 'MB', 'GB', 'TB', 'PB'],
+        number = Math.floor(Math.log(bytes) / Math.log(1024));
+    return (bytes / Math.pow(1024, Math.floor(number))).toFixed(precision) +  ' ' + units[number];
+});
+
 /*
  * Automatically save an input field.
  */
